Fix particle js canvas z-index

--- a/main.scss
+++ b/main.scss
@@ -29,12 +29,12 @@ body {
 }
 
 canvas {
-  position:fixed;
-  top:0;
-  right:0;
-  bottom:0;
-  left:0;
-  z-index:0;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -5;
 }
 
 main {
